2010-10-11  Miguel de Dios  <miguel.dedios@artica.es>

	* extensions/system_info.php: finally I finished (I hope) the extension of
	get system info, now the console part run.
	
	Pending task: #3065357

2010-10-11  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: cleaned source code style.
	
	* extensions/system_info.php: first version of extension for extract system
	info of Pandora System, at the moment run as PHP script shell, the source
	code for console is commented because I will change for new source code.

2010-10-11  Ramon Novoa  <rnovoa@artica.es>

	* include/fgraph.php: Search history DB if necessary for module charts.

2010-10-11  Miguel de Dios  <miguel.dedios@artica.es>

	* include/config_process.php: fixed the execution in as script.
	
	* include/fgraph.php: fixed in the "graphic_combined_module" when is empty.
	And cleaned source code style.
	
	* include/functions_extensions.php: cleaned source code style.
	
	* extensions/pandora_logs.php: cleaned source code style. And set to
	translation a string.
	
	* extras/pandora_diag.php: cleaned source code style.

2010-10-11 Sancho Lerena <slerena@artica.es>

        * include/functions_reporting.php: Fixed problem with SQL custom reports
        because the SQL html encoding. Added a SQL check for secure user-input
        SQL code.

        * include/functions.php: Added check_sql() function to do a basic
        safety check on SQL code.

2010-10-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_io.php: Added \s character in decode HTML entities
	function.

2010-10-08  Sancho Lerena <slerena@artica.es>

    * include/functions_io.php: Added \s character to list of HTML decoded/encoded
    items to be converted from user entries (Safety for XSS and SQL Injection).

    * pandoradb_data.sql: Added more default templates, actions and commands. 
    This is for remote agent management (refresh).
    
2010-10-08  Raúl Mateos <raulofpandora@gmail.com>
